--- a/src/main/java/com/hdy/swing/Grid.form
+++ b/src/main/java/com/hdy/swing/Grid.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.hdy.swing.Grid">
-  <grid id="27dc6" binding="mainPanel" custom-create="true" layout-manager="GridLayoutManager" row-count="6" column-count="8" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" custom-create="true" layout-manager="GridLayoutManager" row-count="6" column-count="15" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="738" height="578"/>
@@ -10,7 +10,7 @@
     <children>
       <component id="a9286" class="javax.swing.JButton" binding="begin">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="6" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="1" row-span="1" col-span="13" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="开始采集"/>
@@ -26,21 +26,12 @@
           <text value="公司档案"/>
         </properties>
       </component>
-      <component id="9cced" class="javax.swing.JRadioButton" binding="otherRadio">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <enabled value="true"/>
-          <text value="其他"/>
-        </properties>
-      </component>
       <component id="d5176" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="输入"/>
+          <text value="公司网站首页地址"/>
         </properties>
       </component>
       <component id="1372e" class="javax.swing.JLabel">
@@ -48,12 +39,12 @@
           <grid row="3" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="输出"/>
+          <text value="输出所采集到内容"/>
         </properties>
       </component>
       <component id="62201" class="javax.swing.JButton" binding="clearOutput">
         <constraints>
-          <grid row="4" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="14" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="清空"/>
@@ -61,7 +52,7 @@
       </component>
       <component id="329d" class="javax.swing.JButton" binding="copyOutput">
         <constraints>
-          <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="14" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="复制"/>
@@ -69,7 +60,7 @@
       </component>
       <component id="a4f9c" class="javax.swing.JButton" binding="copyInput">
         <constraints>
-          <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="14" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="复制"/>
@@ -77,7 +68,7 @@
       </component>
       <component id="f3ce4" class="javax.swing.JButton" binding="clearInput">
         <constraints>
-          <grid row="2" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="14" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="清空"/>
@@ -85,7 +76,7 @@
       </component>
       <scrollpane id="57ab1">
         <constraints>
-          <grid row="3" column="1" row-span="2" col-span="6" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="2" col-span="13" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -98,7 +89,7 @@
       </scrollpane>
       <scrollpane id="5f8ba">
         <constraints>
-          <grid row="1" column="1" row-span="2" col-span="6" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="2" col-span="13" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -113,10 +104,27 @@
       </scrollpane>
       <component id="29288" class="javax.swing.JButton" binding="close">
         <constraints>
-          <grid row="5" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="14" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="关闭"/>
+        </properties>
+      </component>
+      <component id="86ba5" class="javax.swing.JRadioButton" binding="products">
+        <constraints>
+          <grid row="0" column="7" row-span="1" col-span="7" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="供应产品"/>
+        </properties>
+      </component>
+      <component id="9cced" class="javax.swing.JRadioButton" binding="companyPhoto">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+          <text value="公司相册"/>
         </properties>
       </component>
     </children>
@@ -125,6 +133,7 @@
     <group name="requestType">
       <member id="a89d0"/>
       <member id="9cced"/>
+      <member id="86ba5"/>
     </group>
   </buttonGroups>
 </form>
